<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/cream"
    android:orientation="vertical"
    android:padding="5dp"
    tools:context="com.noah.knowyourbcquiz.MainActivity">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="1"
        android:orientation="horizontal">

        <ImageView
            style="@style/images"
            android:src="@drawable/condoms"
            android:contentDescription="@string/colorful_condoms_img"/>

        <ImageView
            style="@style/images"
            android:src="@drawable/pillsround"
            android:contentDescription="@string/pills_img"/>

        <ImageView
            style="@style/images"
            android:src="@drawable/iudsmall"
            android:contentDescription="@string/iud_uterus_img"/>


    </LinearLayout>


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/zero"
        android:layout_weight="3">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title"
                style="@style/titles"
                android:text="@string/quiz_title" />

            <EditText
                android:id="@+id/name"
                style="@style/questions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#fff"
                android:hint="@string/enter_name"
                android:inputType="textCapWords"
                />

            <TextView
                android:id="@+id/question_1"
                style="@style/questions"
                android:text="@string/question_1" />

            <EditText
                android:id="@+id/answer_1"
                style="@style/questions"
                android:background="@color/babyBlue"
                android:hint="@string/hint_question_1"
                android:inputType="textCapWords"
                android:layout_marginTop="@dimen/zero"
                />


            <TextView
                android:id="@+id/question_2"
                style="@style/questions"
                android:text="@string/question_2" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/ten"
                android:layout_marginStart="@dimen/ten"
                android:background="@color/babyBlue"
                android:orientation="vertical"
                android:paddingEnd="@dimen/ten"
                android:paddingStart="@dimen/ten">

                <CheckBox
                    android:id="@+id/answer_2_1"
                    style="@style/checkbox"
                    android:text="@string/answer_2_1" />

                <CheckBox
                    android:id="@+id/answer_2_2"
                    style="@style/checkbox"
                    android:text="@string/answer_2_2" />

                <CheckBox
                    android:id="@+id/answer_2_3"
                    style="@style/checkbox"
                    android:text="@string/answer_2_3" />

                <CheckBox
                    android:id="@+id/answer_2_4"
                    style="@style/checkbox"
                    android:text="@string/answer_2_4" />

                <CheckBox
                    android:id="@+id/answer_2_5"
                    style="@style/checkbox"
                    android:text="@string/answer_2_5" />
            </LinearLayout>


            <TextView
                android:id="@+id/question_3"
                style="@style/questions"
                android:text="@string/question_3" />

            <RadioGroup
                android:id="@+id/answer_3"
                style="@style/answers"
                android:orientation="vertical"
                >

                <RadioButton
                    style="@style/answers"
                    android:id="@+id/answer_3_1"
                    android:text="@string/answer_3_1" />

                <RadioButton
                    style="@style/answers"
                    android:id="@+id/answer_3_2"
                    android:text="@string/answer_3_2" />

                <RadioButton
                    style="@style/answers"
                    android:id="@+id/answer_3_3"
                    android:text="@string/answer_3_3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_4"
                style="@style/questions"
                android:text="@string/question_4" />

            <RadioGroup
                android:id="@+id/answer_4"
                style="@style/answers"
                android:orientation="vertical"
                >

                <RadioButton
                    android:id="@+id/answer_4_1"
                    style="@style/answers"
                    android:text="@string/answer_4_1" />

                <RadioButton
                    android:id="@+id/answer_4_2"
                    style="@style/answers"
                    android:text="@string/answer_4_2" />

                <RadioButton
                    android:id="@+id/answer_4_3"
                    style="@style/answers"
                    android:text="@string/answer_4_3" />
            </RadioGroup>

            <TextView
                android:id="@+id/question_5"
                style="@style/questions"
                android:text="@string/question_5" />

            <RadioGroup
                android:id="@+id/answer_5"
                style="@style/answers"
                android:orientation="vertical"
                >

                <RadioButton
                    android:id="@+id/answer_5_1"
                    style="@style/answers"
                    android:text="@string/answer_5_1" />

                <RadioButton
                    android:id="@+id/answer_5_2"
                    style="@style/answers"
                    android:text="@string/answer_5_2" />


            </RadioGroup>

            <TextView
                android:id="@+id/question_6"
                style="@style/questions"
                android:text="@string/question_6" />

            <RadioGroup
                android:id="@+id/answer_6"
                android:orientation="vertical"
                style="@style/answers"
               >

                <RadioButton
                    android:id="@+id/answer_6_1"
                    style="@style/answers"
                    android:text="@string/answer_6_1" />

                <RadioButton
                    android:id="@+id/answer_6_2"
                    style="@style/answers"
                    android:singleLine="false"
                    android:text="@string/answer_6_2" />
            </RadioGroup>


            <Button
                android:backgroundTint="@color/salmon"
                android:onClick="finish"
                android:text="@string/finish_button"
                android:layout_marginTop="@dimen/ten"
                style="@style/buttons" />

            <Button
                style="@style/buttons"
                android:backgroundTint="@color/peach"
                android:onClick="resetGrade"
                android:text="@string/reset_button"
                 />

            <TextView
                android:id="@+id/more_info"
                android:text="@string/more_info"
                android:textColor="@color/black"
                style="@style/links" />


            <TextView
                style="@style/links"
                android:id="@+id/link_your_life"
                android:text="@string/your_life"
                android:textColorLink="@color/darkaqua" />

            <TextView
                style="@style/links"
                android:id="@+id/link_who"
                android:paddingBottom="@dimen/twenty"
                android:text="@string/who"
                android:textColorLink="@color/darkaqua" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>

